--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cli-router",
-  "version": "0.0.1",
+  "name": "templates-storage",
+  "version": "0.0.2",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/EvgenyiFedotov/cli-router#readme",
   "bin": {
-    "template": "./src/index.js"
+    "templates-storage": "src/index.js"
   },
   "dependencies": {
     "chalk-pipe": "^2.0.0",
