--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "templates-storage",
+  "name": "sampi",
   "version": "0.0.2",
   "description": "",
   "main": "src/index.js",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/EvgenyiFedotov/cli-router#readme",
   "bin": {
-    "templates-storage": "src/index.js"
+    "sampi": "src/index.js"
   },
   "dependencies": {
     "chalk-pipe": "^2.0.0",
