--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.3",
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EvgenyiFedotov/cli-router.git"
