--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sampi",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "src/index.js",
   "scripts": {},
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/EvgenyiFedotov/cli-router#readme",
   "bin": {
-    "sampi": "src/index.js"
+    "sampi": "src/commands.js"
   },
   "dependencies": {
     "chalk-pipe": "^2.0.0",
